--- a/src/components/LoveLetter/LoveLetter.css
+++ b/src/components/LoveLetter/LoveLetter.css
@@ -30,7 +30,7 @@
     top: 50%;
     width: 100%;
     height: 50%;
-    background: url('https://static.vecteezy.com/system/resources/previews/010/029/965/non_2x/love-letter-pattern-texture-with-text-effect-on-a-white-background-valentine-s-day-special-seamless-pattern-design-with-love-shapes-love-endless-pattern-decoration-for-bed-sheets-and-wallpapers-vector.jpg');
+    background: url('https://www.funimada.com/assets/images/cards/big/micky-3.gif');
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
     z-index: -1;
