--- a/src/components/LoveLetter/LoveLetter.css
+++ b/src/components/LoveLetter/LoveLetter.css
@@ -30,7 +30,7 @@
     top: 50%;
     width: 100%;
     height: 50%;
-    background: url('https://www.funimada.com/assets/images/cards/big/micky-3.gif');
+    background: url('https://d23.com/app/uploads/2023/11/1180w_600h_111823_Mickey-Mouse-Brand-Spot_00.jpg');
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
     z-index: -1;
